--- a/index.html
+++ b/index.html
@@ -5,21 +5,95 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TheMagicHandyWizard — Inquiry Form</title>
   <style>
-    :root{--bg:#f4e7cf;--card:#fff;--accent:#0f1724;--muted:#6b6b6b;--primary:#0b74f0}
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial;color:var(--accent);background:linear-gradient(180deg,var(--bg),#efe1c8);display:flex;min-height:100vh;align-items:center;justify-content:center;padding:32px}
-    .wrap{max-width:880px;width:100%;}
-    header{display:flex;align-items:center;gap:18px;margin-bottom:18px;justify-content:center}
-    .logo{font-weight:800;font-size:28px;letter-spacing:.6px}
-    .banner{background:#222;color:#f8f3e8;display:inline-block;padding:10px 18px;border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,.15)}
-    .card{background:var(--card);padding:26px;border-radius:14px;box-shadow:0 10px 30px rgba(15,23,36,.12)}
-    form{display:grid;gap:14px}
-    label{font-weight:600}
-    input,select,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid #ccc;font-family:inherit;font-size:15px}
-    button{background:var(--primary);color:#fff;border:none;padding:12px 20px;border-radius:10px;cursor:pointer;font-size:16px;font-weight:600;transition:background .3s}
-    button:hover{background:#095ec3}
-    footer{text-align:center;margin-top:18px;color:var(--muted);font-size:13px}
-    #thankyou-message{display:none;text-align:center;padding:20px;font-weight:600;color:green}
+    :root {
+      --bg: #f4e7cf;
+      --card: #fff;
+      --accent: #0f1724;
+      --muted: #6b6b6b;
+      --primary: #0b74f0;
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, Segoe UI, Roboto, Helvetica, Arial;
+      color: var(--accent);
+      background: linear-gradient(180deg, var(--bg), #efe1c8);
+      display: flex;
+      min-height: 100vh;
+      align-items: center;
+      justify-content: center;
+      padding: 32px;
+    }
+    .wrap { max-width: 880px; width: 100%; }
+    header {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+      margin-bottom: 18px;
+      justify-content: center;
+    }
+    .logo { font-weight: 800; font-size: 28px; letter-spacing: .6px; }
+    .banner {
+      background: #222;
+      color: #f8f3e8;
+      display: inline-block;
+      padding: 10px 18px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,.15);
+    }
+    .card {
+      background: var(--card);
+      padding: 26px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(15,23,36,.12);
+    }
+    form { display: grid; gap: 14px; }
+    label { font-weight: 600; }
+    .field-wrap { position: relative; }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-family: inherit;
+      font-size: 15px;
+    }
+    input.valid { border-color: #2ecc71; }
+    .checkmark {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #2ecc71;
+      font-size: 18px;
+      display: none;
+    }
+    .checkmark.show { display: block; }
+    button {
+      background: var(--primary);
+      color: #fff;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 600;
+      transition: background .3s;
+    }
+    button:hover { background: #095ec3; }
+    footer {
+      text-align: center;
+      margin-top: 18px;
+      color: var(--muted);
+      font-size: 13px;
+    }
+    #thankyou-message {
+      display: none;
+      text-align: center;
+      padding: 20px;
+      font-weight: 600;
+      color: green;
+    }
   </style>
 </head>
 <body>
@@ -32,12 +106,8 @@
       <h1>Service Inquiry Form</h1>
       <p>Please fill out the form below to send your inquiry directly to <strong>TheMagicHandyWizard@proton.me</strong>.</p>
 
-      <!-- Web3Forms Integration -->
       <form id="inquiry-form" action="https://api.web3forms.com/submit" method="POST">
-        <!-- Web3Forms Access Key -->
         <input type="hidden" name="access_key" value="bad218f9-a3b7-4715-98f6-80591fbddf3a">
-
-        <!-- Email destination (optional override for your ProtonMail) -->
         <input type="hidden" name="email" value="TheMagicHandyWizard@proton.me">
 
         <div>
@@ -55,9 +125,24 @@
           <input type="date" id="date" name="Date" required>
         </div>
 
-        <div>
-          <label for="email">Your Email</label>
-          <input type="email" id="email" name="Email" required>
+        <div class="field-wrap">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="Email" placeholder="example@email.com" required>
+          <span class="checkmark" id="email-check">✅</span>
+        </div>
+
+        <div class="field-wrap">
+          <label for="phone">Phone Number</label>
+          <input 
+            type="tel" 
+            id="phone" 
+            name="Phone Number" 
+            placeholder="(555) 123-4567"
+            pattern="^\\(\\d{3}\\)\\s\\d{3}-\\d{4}$"
+            title="Please enter a valid phone number like (555) 123-4567"
+            required
+          >
+          <span class="checkmark" id="phone-check">✅</span>
         </div>
 
         <div>
@@ -91,6 +176,39 @@
   </div>
 
   <script>
+    // Auto-format phone number and show checkmark when valid
+    const phoneInput = document.getElementById('phone');
+    const phoneCheck = document.getElementById('phone-check');
+    const emailInput = document.getElementById('email');
+    const emailCheck = document.getElementById('email-check');
+
+    phoneInput.addEventListener('input', function(e) {
+      let value = e.target.value.replace(/\D/g, '');
+      if (value.length > 10) value = value.slice(0, 10);
+      const formatted = value.replace(/(\d{0,3})(\d{0,3})(\d{0,4})/, function(_, a, b, c) {
+        let result = '';
+        if (a) result = '(' + a;
+        if (a && a.length === 3) result += ') ';
+        if (b) result += b;
+        if (b && b.length === 3) result += '-';
+        if (c) result += c;
+        return result;
+      });
+      e.target.value = formatted;
+
+      const isValid = /^\(\d{3}\)\s\d{3}-\d{4}$/.test(formatted);
+      e.target.classList.toggle('valid', isValid);
+      phoneCheck.classList.toggle('show', isValid);
+    });
+
+    // Email validation with live check
+    emailInput.addEventListener('input', function(e) {
+      const isValid = /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/.test(e.target.value);
+      e.target.classList.toggle('valid', isValid);
+      emailCheck.classList.toggle('show', isValid);
+    });
+
+    // Handle Web3Forms submission
     const form = document.getElementById('inquiry-form');
     const thankYou = document.getElementById('thankyou-message');
 
@@ -105,6 +223,8 @@
       if (response.ok) {
         thankYou.style.display = 'block';
         form.reset();
+        [phoneCheck, emailCheck].forEach(c => c.classList.remove('show'));
+        [phoneInput, emailInput].forEach(i => i.classList.remove('valid'));
         setTimeout(() => thankYou.style.display = 'none', 6000);
       } else {
         alert('⚠️ There was an error sending your message. Please try again.');
