--- a/index.html
+++ b/index.html
@@ -5,204 +5,125 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TheMagicHandyWizard — Inquiry Form</title>
   <style>
-    :root {
-      --bg: #f4e7cf;
-      --card: #fff;
-      --accent: #0f1724;
-      --muted: #6b6b6b;
-      --primary: #0b74f0;
-    }
-    * { box-sizing: border-box; }
     body {
+      font-family: Arial, sans-serif;
+      background: #f4e7cf;
       margin: 0;
-      font-family: Inter, system-ui, Segoe UI, Roboto, Helvetica, Arial;
-      color: var(--accent);
-      background: linear-gradient(180deg, var(--bg), #efe1c8);
+      padding: 20px;
       display: flex;
-      min-height: 100vh;
-      align-items: center;
       justify-content: center;
-      padding: 32px;
+      align-items: center;
+      min-height: 100vh;
     }
-    .wrap { max-width: 880px; width: 100%; }
-    header { text-align: center; margin-bottom: 20px; }
-    .logo {
-      font-weight: 800;
-      font-size: 30px;
-      background: #222;
-      color: #f8f3e8;
-      display: inline-block;
-      padding: 10px 18px;
-      border-radius: 12px;
-      box-shadow: 0 6px 18px rgba(0,0,0,.15);
+    .container {
+      background: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 6px 18px rgba(0,0,0,.1);
+      width: 100%;
+      max-width: 600px;
     }
-    .card {
-      background: var(--card);
-      padding: 26px;
-      border-radius: 14px;
-      box-shadow: 0 10px 30px rgba(15,23,36,.12);
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
     }
-    form { display: grid; gap: 16px; }
-    label { font-weight: 600; margin-bottom: 6px; display: block; }
-    .field-wrap { position: relative; }
-    input, select, textarea {
+    label {
+      font-weight: bold;
+      display: block;
+      margin-bottom: 5px;
+    }
+    input, select, textarea, button {
       width: 100%;
       padding: 10px;
-      border-radius: 8px;
+      margin-bottom: 15px;
       border: 1px solid #ccc;
-      font-family: inherit;
+      border-radius: 8px;
       font-size: 15px;
+      box-sizing: border-box;
     }
-    input.valid { border-color: #2ecc71; }
-    .checkmark {
-      position: absolute;
-      right: 12px;
-      top: 38px;
-      color: #2ecc71;
-      font-size: 18px;
-      display: none;
-    }
-    .checkmark.show { display: block; }
     button {
-      background: var(--primary);
+      background: #0b74f0;
       color: #fff;
       border: none;
-      padding: 12px 20px;
-      border-radius: 10px;
       cursor: pointer;
-      font-size: 16px;
-      font-weight: 600;
-      transition: background .3s;
+      transition: background 0.3s;
     }
-    button:hover { background: #095ec3; }
-    footer {
-      text-align: center;
-      margin-top: 18px;
-      color: var(--muted);
-      font-size: 13px;
+    button:hover {
+      background: #095ec3;
     }
     #thankyou-message {
       display: none;
-      text-align: center;
-      padding: 20px;
-      font-weight: 600;
       color: green;
+      text-align: center;
+      margin-top: 10px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div class="logo">TheMagicHandyWizard</div>
-    </header>
+  <div class="container">
+    <h1>TheMagicHandyWizard</h1>
+    <form id="inquiry-form" action="https://api.web3forms.com/submit" method="POST">
+      <input type="hidden" name="access_key" value="bad218f9-a3b7-4715-98f6-80591fbddf3a">
+      <input type="hidden" name="email" value="TheMagicHandyWizard@proton.me">
 
-    <main class="card">
-      <h1>Service Inquiry Form</h1>
-      <p>Please fill out the form below to send your inquiry directly to <strong>TheMagicHandyWizard@proton.me</strong>.</p>
+      <label for="firstName">First Name</label>
+      <input type="text" id="firstName" name="First Name" required>
 
-      <form id="inquiry-form" action="https://api.web3forms.com/submit" method="POST">
-        <input type="hidden" name="access_key" value="bad218f9-a3b7-4715-98f6-80591fbddf3a">
-        <input type="hidden" name="email" value="TheMagicHandyWizard@proton.me">
+      <label for="lastName">Last Name</label>
+      <input type="text" id="lastName" name="Last Name" required>
 
-        <div>
-          <label for="firstName">First Name</label>
-          <input type="text" id="firstName" name="First Name" required>
-        </div>
+      <label for="date">Today's Date</label>
+      <input type="date" id="date" name="Date" required>
 
-        <div>
-          <label for="lastName">Last Name</label>
-          <input type="text" id="lastName" name="Last Name" required>
-        </div>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="Email" placeholder="example@email.com" required>
 
-        <div>
-          <label for="date">Today's Date</label>
-          <input type="date" id="date" name="Date" required>
-        </div>
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="Phone Number" placeholder="(555) 123-4567" required>
 
-        <div class="field-wrap">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="Email" placeholder="example@email.com" required>
-          <span class="checkmark" id="email-check">✅</span>
-        </div>
+      <label for="service">Service Requested</label>
+      <select id="service" name="Service" required>
+        <option value="">-- Please Select a Service --</option>
+        <option value="Lawn Service with personal equipment">Lawn Service with personal equipment</option>
+        <option value="Interior painting">Interior painting</option>
+        <option value="Exterior Painting">Exterior Painting</option>
+        <option value="Deep house Cleaning">Deep house Cleaning</option>
+        <option value="Magic Simple House Cleaning">Magic Simple House Cleaning</option>
+        <option value="Cleaning Trash Bins">Cleaning Trash Bins</option>
+        <option value="Window Washing">Window Washing</option>
+      </select>
 
-        <div class="field-wrap">
-          <label for="phone">Phone Number</label>
-          <input type="tel" id="phone" name="Phone Number" placeholder="(555) 123-4567" required>
-          <span class="checkmark" id="phone-check">✅</span>
-        </div>
+      <label for="message">Additional Details (optional)</label>
+      <textarea id="message" name="Message" rows="5"></textarea>
 
-        <div>
-          <label for="service">Service Requested</label>
-          <select id="service" name="Service" required>
-            <option value="">-- Please Select a Service --</option>
-            <option value="Lawn Service with personal equipment">Lawn Service with personal equipment</option>
-            <option value="Interior painting">Interior painting</option>
-            <option value="Exterior Painting">Exterior Painting</option>
-            <option value="Deep house Cleaning">Deep house Cleaning</option>
-            <option value="Magic Simple House Cleaning">Magic Simple House Cleaning</option>
-            <option value="Cleaning Trash Bins">Cleaning Trash Bins</option>
-            <option value="Window Washing">Window Washing</option>
-          </select>
-        </div>
-
-        <div>
-          <label for="message">Additional Details (optional)</label>
-          <textarea id="message" name="Message" rows="5" placeholder="Describe your project or preferred schedule..."></textarea>
-        </div>
-
-        <button type="submit">Submit Inquiry</button>
-      </form>
-
-      <div id="thankyou-message">✅ Thank you! Your inquiry has been sent successfully.</div>
-
-      <footer>
-        © 2025 The Magic Handy Wizard — Your trusted wizard for cleaning & painting services.
-      </footer>
-    </main>
+      <button type="submit">Submit Inquiry</button>
+    </form>
+    <div id="thankyou-message">✅ Thank you! Your inquiry has been sent successfully.</div>
   </div>
 
   <script>
-    const phoneInput = document.getElementById('phone');
-    const phoneCheck = document.getElementById('phone-check');
-    const emailInput = document.getElementById('email');
-    const emailCheck = document.getElementById('email-check');
     const form = document.getElementById('inquiry-form');
     const thankYou = document.getElementById('thankyou-message');
+    const phoneInput = document.getElementById('phone');
+    const emailInput = document.getElementById('email');
 
     function isValidPhone(value) {
       return /^\D*(\d\D*){10,15}$/.test(value);
     }
 
-    function formatUSPhone(value) {
-      const digits = (value.match(/\d/g) || []).join('').slice(0, 10);
-      if (digits.length <= 3) return digits;
-      if (digits.length <= 6) return `(${digits.slice(0, 3)}) ${digits.slice(3)}`;
-      return `(${digits.slice(0, 3)}) ${digits.slice(3, 6)}-${digits.slice(6)}`;
+    function isValidEmail(value) {
+      return /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/.test(value);
     }
-
-    phoneInput.addEventListener('input', () => {
-      const formatted = formatUSPhone(phoneInput.value);
-      phoneInput.value = formatted;
-      const valid = isValidPhone(formatted);
-      phoneInput.classList.toggle('valid', valid);
-      phoneCheck.classList.toggle('show', valid);
-    });
-
-    // ✅ Fixed email validation regex
-    emailInput.addEventListener('input', () => {
-      const valid = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(emailInput.value);
-      emailInput.classList.toggle('valid', valid);
-      emailCheck.classList.toggle('show', valid);
-    });
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
       const phoneValid = isValidPhone(phoneInput.value);
-      const emailValid = /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(emailInput.value);
+      const emailValid = isValidEmail(emailInput.value);
 
       if (!phoneValid) {
-        alert('⚠️ Please enter a valid phone number (at least 10 digits).');
+        alert('⚠️ Please enter a valid phone number (10-15 digits).');
         phoneInput.focus();
         return;
       }
@@ -213,14 +134,7 @@
         return;
       }
 
-      const digits = (phoneInput.value.match(/\d/g) || []).join('');
-      const formattedDigits = digits.length >= 10
-        ? `(${digits.slice(0,3)}) ${digits.slice(3,6)}-${digits.slice(6,10)}`
-        : digits;
-
       const formData = new FormData(form);
-      formData.set('Phone Number', formattedDigits);
-
       const response = await fetch(form.action, {
         method: form.method,
         body: formData
@@ -229,8 +143,6 @@
       if (response.ok) {
         thankYou.style.display = 'block';
         form.reset();
-        [phoneCheck, emailCheck].forEach(el => el.classList.remove('show'));
-        [phoneInput, emailInput].forEach(el => el.classList.remove('valid'));
         setTimeout(() => (thankYou.style.display = 'none'), 5000);
       } else {
         alert('There was an error sending your message. Please try again.');
